--- a/README
+++ b/README
@@ -2,11 +2,12 @@ JSWorld API
 
 Summary
 =======
-[Fill me in]
+
+Reactive World-style programming in Javascript.
 
 
 
-Examples
+Example
 ========
 [Fill me in]
 
@@ -24,10 +25,41 @@ css-style: (node (listof (list string string)))
 
 
 
-Functions
-=========
 
-plt.Jsworld.bigBang: world (world -> sexp) (world -> (listof css-style)) number (world -> world) (listof (list string string)) -> world
+big-bang
+========
+
+plt.Jsworld.big_bang: node world (listof handler) (listof css-style) -> world
+
+Starts a reactive computation.  If a big_bang is already in effect,
+temporarily pauses that computation and begins a new nested one.
+
+
+
+Handler functions
+==================
+plt.on_draw: (world -> (sexpof dom)) (world -> (sexpof css-style)) -> handler
+
+Called whenever the world changes; the first argument produces a new
+dom, and the second produces the new styles applied to that dom.
+
+
+plt.on_tick: number (world -> world) -> handler
+
+Called after n milliseconds to go from one world to the next.
+
+
+
+plt.stop_when: (world -> boolean) (world -> void) -> handler
+
+Registers a stop-when handler that consumes a world judger.  If the
+judge says that th world is stopped, then the reactive computation
+completes and the final world value is sent to the second function.
+
+
+
+
+
 
 
 plt.Jsworld.p: assoc -> node
