--- a/README
+++ b/README
@@ -36,6 +36,19 @@ temporarily pauses that computation and begins a new nested one.
 
 
 
+Helpers
+=======
+
+node_to_tree: node -> (sexpof dom)
+
+Given a node, produces an (sexpof dom) of that node.  Useful when you
+want to use the existing dom tree in a static HTML file in a big-bang.
+See examples/static-with-jsworld for an example of this.
+
+
+
+
+
 Handler functions
 ==================
 plt.on_draw: (world -> (sexpof dom)) (world -> (sexpof css-style)) -> handler
